--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-# Altera a estrutura da tabela caso a entidade tenha mudanças.
-spring.jpa.hibernate.ddl-auto=update
-
-# Acesso ao banco de dados
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/projeto_angular_spring
-# Usuário do banco de dados
-spring.datasource.username=root	
-# Senha do banco de dados
+spring.datasource.url=jdbc:mysql://localhost/projeto_angular_spring
+spring.datasource.username=root
 spring.datasource.password=root0808
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
